feat: add enterprise repository configuration
- Add Dependabot configuration for automated dependency updates
- Configure CNAME for custom domain (ironcodestudios.org)
- Update root package.json with comprehensive build scripts
- Set up repository labels for issue management
- Configure enterprise-grade development workflow

--- a/package.json
+++ b/package.json
@@ -3,13 +3,25 @@
   "version": "1.0.0",
   "description": "Iron Code Studios Website - Frontend",
   "scripts": {
-    "dev": "node backend/server.js",
-    "start": "node backend/server.js",
+    "start": "cd backend && npm start",
+    "dev": "cd backend && npm run dev",
+    "install:backend": "cd backend && npm install",
+    "test": "cd backend && npm test",
+    "test:coverage": "cd backend && npm run test:coverage",
+    "lint": "cd backend && npm run lint && eslint js/**/*.js",
+    "lint:fix": "cd backend && npm run lint:fix && eslint js/**/*.js --fix",
+    "lint:css": "stylelint \"css/**/*.css\"",
     "format": "prettier --write \"**/*.{html,css,js,json,md}\"",
     "format:check": "prettier --check \"**/*.{html,css,js,json,md}\"",
-    "lint:css": "stylelint \"css/**/*.css\"",
+    "build": "npm run lint && npm run test && npm run format:check",
+    "build:prod": "npm run build && echo 'Production build complete'",
     "serve": "python3 -m http.server 8000",
-    "build:prod": "echo 'Building for production...' && npm run format"
+    "docker:build": "docker build -t iron-code-studios .",
+    "docker:run": "docker run -p 3000:3000 iron-code-studios",
+    "docker:dev": "docker-compose up --build",
+    "security": "cd backend && npm audit",
+    "setup": "npm run install:backend && cp .env.example backend/.env",
+    "deploy": "gh-pages -d ."
   },
   "keywords": [
     "website",
