fix: update domain from ironcodestudios.org to ironcodestudios.com
- Update CNAME file to use correct domain
- Fix CI/CD pipeline health checks and CNAME generation
- Update environment template with correct domain

--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ ENABLE_UPDATES_API=true
 
 # ===== DEPLOYMENT CONFIGURATION =====
 # Production domain
-PRODUCTION_DOMAIN=ironcodestudios.org
-STAGING_DOMAIN=staging.ironcodestudios.org
+PRODUCTION_DOMAIN=ironcodestudios.com
+STAGING_DOMAIN=staging.ironcodestudios.com
 
 # ===== EXTERNAL SERVICES =====
 # GitHub integration
